--- a/.htaccess
+++ b/.htaccess
@@ -73,3 +73,8 @@ RewriteRule ^files/products/(.+) resize/resize.php?file=$1&token=%{QUERY_STRING}
 #RewriteRule ^files/products/(.+) resize/resize.php?file=%2&token=%3 [L,NE]
 
 
+#resizing_image blog_image
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^files/(.+)/(.+) resize/resize.php?type=$1&file=$2&token=%{QUERY_STRING}
+##resizing_image blog_image
