--- a/.htaccess
+++ b/.htaccess
@@ -69,6 +69,13 @@ RewriteRule ^/?$	index.php?module=MainView&page_url= [L,QSA]
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^files/products/(.+) resize/resize.php?file=$1&token=%{QUERY_STRING}
+
+#resizing_image blog_image
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^files/(.+)/(.+) resize/resize.php?type=$1&file=$2&token=%{QUERY_STRING}
+##resizing_image blog_image
+
 #RewriteCond %{THE_REQUEST} ^GET\ (.*)files/products/(.*)\?([A-z0-9]*) 
 #RewriteRule ^files/products/(.+) resize/resize.php?file=%2&token=%3 [L,NE]
 
